syntax = "proto3";

package shortener;

option go_package = "github.com/JoYBoy7214/distributed_shortener/api/proto/v1";

service Shortener {
  rpc CreateShortUrl (CreateShortUrlRequest) returns (CreateShortUrlResponse);
  rpc GetOriginalUrl (GetOriginalUrlRequest) returns (GetOriginalUrlResponse);
  rpc GetClickCount  (GetOriginalUrlRequest) returns (GetClickCountResponse);
}

message CreateShortUrlRequest {
  string original_url = 1;
  string user_id = 2;
}

message CreateShortUrlResponse {
  string short_url = 1;
}

message GetOriginalUrlRequest {
  string short_url = 1;
}

message GetOriginalUrlResponse {
  string original_url = 1;
}

message GetClickCountResponse{
  int64 click_count=1;
}